--- a/force-app/main/default/aura/ResourceItem/ResourceItem.css
+++ b/force-app/main/default/aura/ResourceItem/ResourceItem.css
@@ -1,6 +1,5 @@
 .THIS.resource-container {
     display: flex;
-    height: 90px;
     margin: 0 11px 48px 18px;
     min-width: 510px;
 }
@@ -16,11 +15,6 @@
 .THIS .resource-image-container > img {
     display: block;
     position: relative;
-    top: 50%;
-    left: 50%;
-    min-height: 100%;
-    min-width: 100%;
-    transform: translate(-50%, -50%);
 }
 
 .THIS .resource-description-footer {
@@ -79,4 +73,30 @@
 
 .THIS .resource-pointer {
     cursor: pointer;
+}
+@media (max-width: 1140px) {
+    .THIS.resource-container {
+        min-width: 420px;
+    }
+}
+@media (max-width: 1020px) {
+    .THIS.resource-container {
+        min-width: auto;
+        width: 100%;
+    }
+    .THIS .resource-description-title {
+        height: auto;
+        font-size: 11px;
+        font-weight: 500;
+        line-height: normal;
+    }
+    .THIS .resource-description-text {
+        height: auto;
+        font-size: 10px;
+        line-height: normal;
+        margin: 0 0 3px 0;
+    }
+    .THIS .resource-description {
+        margin-right: 7%;
+    }
 }
