Added new metadata

--- a/unpackaged/main/default/layouts/Participant__c-PII Compliant.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant__c-PII Compliant.layout-meta.xml
@@ -95,6 +95,10 @@
                 <behavior>Edit</behavior>
                 <field>Date_of_Birth__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Middle_Name__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
