--- a/force-app/main/default/aura/RRActionApprove/RRActionApprove.cmp
+++ b/force-app/main/default/aura/RRActionApprove/RRActionApprove.cmp
@@ -5,25 +5,22 @@
 <aura:component description="RRActionApprove">
 
     <!-- attributes: -->
-    <aura:attribute name="parent" type="Aura.Component"/>
-    <aura:attribute name="text" type="String"/>
-    <aura:attribute name="leftBtnName" type="String" default="{!$Label.c.BTN_Yes}"/>
-    <aura:attribute name="rightBtnName" type="String" default="{!$Label.c.BTN_No}"/>
+    <aura:attribute name="message" type="String"/>
+    <aura:attribute name="dialogTitle" type="String"/>
+    <aura:attribute name="approveBtnName" type="String" default="{!$Label.c.BTN_Yes}"/>
+    <aura:attribute name="cancelBtnName" type="String" default="{!$Label.c.BTN_No}"/>
     <aura:attribute name="callback" type="Object" access="private"/>
 
     <aura:method name="execute" action="{!c.doExec}">
-        <aura:attribute name="text" type="String"/>
-        <aura:attribute name="leftBtnName" type="String"/>
-        <aura:attribute name="rightBtnName" type="String"/>
         <aura:attribute name="callback" type="Function"/>
         <aura:attribute name="cancelCallback" type="Function"/>
     </aura:method>
 
-    <c:Popup aura:id="popup" title="" size="small">
-        {!v.title}
+    <c:Popup aura:id="popup" title="{!v.dialogTitle}" size="small">
+        {!v.message}
         <aura:set attribute="footerButtons">
-            <button class="apollo-btn primary" onclick="{!c.doSuccess}">{!v.leftBtnName}</button>
-            <button class="apollo-btn tertiary" onclick="{!c.doCancel}">{!v.rightBtnName}</button>
+            <button class="apollo-btn primary" onclick="{!c.doSuccess}">{!v.approveBtnName}</button>
+            <button class="apollo-btn tertiary" onclick="{!c.doCancel}">{!v.cancelBtnName}</button>
         </aura:set>
     </c:Popup>
 
