--- a/force-app/main/default/aura/Help/Help.cmp
+++ b/force-app/main/default/aura/Help/Help.cmp
@@ -41,29 +41,30 @@
                         <c:rrButtonTubSetItem title="{!$Label.c.PG_HLP_H_Give_Us_Feedback_About_a_Feature}"
                                               tabId="feedback"
                                               currentTab="{!v.currentTab}"/>
-                        <c:rrButtonTubSetItem title="{!$Label.c.PG_HLP_H_Report_a_Problem}" tabId="problem"
-                                              currentTab="{!v.currentTab}"/>
-                        <!--Hide until the next release-->
-<!--                        <aura:if isTrue="{!v.userMode == 'Participant'}">-->
-<!--                            <c:rrButtonTubSetItem title="{!$Label.c.PG_HLP_Req_Data}" tabId="req-data"-->
-<!--                                                  currentTab="{!v.currentTab}" isDisabled="{!v.isDelegate}"/>-->
+                        <aura:if isTrue="{!v.userMode != 'Participant'}">
+                            <c:rrButtonTubSetItem title="{!$Label.c.PG_HLP_H_Report_a_Problem}" tabId="problem"
+                                                  currentTab="{!v.currentTab}"/>
+                        </aura:if>
+                        <aura:if isTrue="{!v.userMode == 'Participant'}">
+                            <c:rrButtonTubSetItem title="{!$Label.c.PG_HLP_Req_Data}" tabId="req-data"
+                                                  currentTab="{!v.currentTab}" isDisabled="{!v.isDelegate}"/>
 <!--                            <c:rrButtonTubSetItem title="{!$Label.c.PG_HLP_Study_H}" tabId="study-h"-->
 <!--                                                  currentTab="{!v.currentTab}"/>-->
-<!--                        </aura:if>-->
+                        </aura:if>
                     </c:rrButtonTubSet>
                 </div>
-                <div class="rr-small-up-hide">
-                    <lightning:select label="label" value="{!v.currentTab}" variant="label-hidden">
-                        <option value="help" label="{!$Label.c.PG_HLP_H_Application_Help}"/>
-                        <option value="feedback" label="{!$Label.c.PG_HLP_H_Give_Us_Feedback_About_a_Feature}"/>
-                        <option value="problem" label="{!$Label.c.PG_HLP_H_Report_a_Problem}"/>
+<!--                <div class="rr-small-up-hide">-->
+<!--                    <lightning:select label="label" value="{!v.currentTab}" variant="label-hidden">-->
+<!--                        <option value="help" label="{!$Label.c.PG_HLP_H_Application_Help}"/>-->
+<!--                        <option value="feedback" label="{!$Label.c.PG_HLP_H_Give_Us_Feedback_About_a_Feature}"/>-->
+<!--                        <option value="problem" label="{!$Label.c.PG_HLP_H_Report_a_Problem}"/>-->
                         <!--Hide until the next release-->
 <!--                        <aura:if isTrue="{!v.userMode == 'Participant'}">-->
 <!--                            <option value="req-data" label="{!$Label.c.PG_HLP_Req_Data}"/>-->
 <!--                            <option value="study-h" label="{!$Label.c.PG_HLP_Study_H}"/>-->
 <!--                        </aura:if>-->
-                    </lightning:select>
-                </div>
+<!--                    </lightning:select>-->
+<!--                </div>-->
             </aura:if>
         </div>
         <!--Display depending on the selected tab-->
