--- a/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
+++ b/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
@@ -29,6 +29,7 @@
                     </aura:iteration>
                 </c:RRTable>
             </aura:if>
+            <c:EmptyListStub targetList="{!v.visits}" iconName="none"/>
         </div>
         <div class="sv-footer">
             <c:RRLink page="study-workspace?tab=tab-visits" label="{!$Label.c.Resources_See_All}"/>
