--- a/force-app/main/default/aura/SearchForReferralNetwork/SearchForReferralNetwork.cmp
+++ b/force-app/main/default/aura/SearchForReferralNetwork/SearchForReferralNetwork.cmp
@@ -13,15 +13,15 @@
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
-    <c:Popup aura:id="searchModal" title="Select Your Conditions of Interest" size="medium" showClose="false"
-             primaryButtonLabel="Save" variant="slds-float--right">
+    <c:Popup aura:id="searchModal" title="Select Your Referral Networks" size="medium" showClose="false"
+             primaryButtonLabel="Save" variant="slds-float--right" showFooter="false">
 
         <div>
             <lightning:input onchange="{!c.bulkSearch}" aura:id="searchInput" type="search" name="search" label=""
                              variant="label-hidden" placeholder="Search for Referral Networks"/>
         </div>
 
-        <div class="slds-m-top--medium" style="height: 200px !important; overflow-y: scroll;">
+        <div class="slds-m-top--medium" style="height: 220px; overflow-y: scroll;">
             <table aria-multiselectable="true"
                    class="slds-table slds-table_header-hidden slds-table_edit slds-tree slds-table_tree"
                    role="treegrid">
@@ -45,8 +45,8 @@
             </table>
         </div>
 
-        <aura:set attribute="footerButtons">
-            <button class="apollo-btn tertiary" id="Cancel" onclick="{!c.doClose}">{!$Label.c.BTN_Close}</button>
-        </aura:set>
+        <div class="slds-m-top--medium">
+            <button class="apollo-btn tertiary" id="close-btn" onclick="{!c.doClose}">{!$Label.c.BTN_Close}</button>
+        </div>
     </c:Popup>
 </aura:component>
