--- a/force-app/main/default/aura/SubscribeToReferralNetwork/SubscribeToReferralNetwork.cmp
+++ b/force-app/main/default/aura/SubscribeToReferralNetwork/SubscribeToReferralNetwork.cmp
@@ -13,7 +13,7 @@
             <aura:if isTrue="{!!empty(v.records)}">
                 <aura:iteration items="{!v.records}" var="record" indexVar="arrayInd">
                     <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-1">
-                        <div class="slds-pill slds-container--fluid">
+                        <div class="slds-pill slds-container--fluid slds-m-bottom--x-small">
                             <div class="slds-pill__label slds-p-left--medium">{!record.Name}</div>
                             <div class="slds-float--right">
                                 <lightning:buttonIcon iconName="utility:close" variant="bare"
