--- a/unpackaged/main/default/layouts/Contact-IQVIA Contact Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Contact-IQVIA Contact Layout.layout-meta.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
-    <excludeButtons>RequestUseSfdc</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
@@ -59,6 +58,14 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Delegate_Opt_In_Status_Emails__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>SitesInterested__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>TopicsInterested__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -289,7 +296,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h9E000000lik4</masterLabel>
+        <masterLabel>00h4E000000izeg</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
