--- a/unpackaged/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
@@ -46,6 +46,10 @@
                 <behavior>Edit</behavior>
                 <field>Study_Site_Type__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ReferralNetworkId__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
