PEH-267. Share Button email fix

--- a/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.cmp
+++ b/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.cmp
@@ -74,6 +74,7 @@
                                 linkedInIconClass="resources-icon-like"
                                 linkToShare="{!v.resourceWrapper.resource.article_external_link__c}"
                                 mailSendMessage="{!v.resourceWrapper.shareMessage}"
+                                whatId="{!v.resourceWrapper.resource.Id}"
                         />
                     </div>
                 </aura:if>
