--- a/force-app/main/default/aura/SocialSharing/SocialSharing.cmp
+++ b/force-app/main/default/aura/SocialSharing/SocialSharing.cmp
@@ -14,6 +14,10 @@
     <aura:attribute type="String" name="mailSendMessage"/>
     <aura:attribute type="String" name="cssClass"/>
     <aura:attribute type="String" name="linkToShare"/>
+    <aura:attribute name="whatId" type="String"/>
+
+    <aura:method name="refresh" action="{!c.doInit}" access="public"/>
+
     <div class="{!v.cssClass != null?v.cssClass:'resource-share-icons'}">
         <div class="resource-element">
             <a href="javascript:void(0);" target="popup" onclick="{!c.onEmailClick}">
