Updated Task Edit

--- a/force-app/main/default/aura/TaskEdit/TaskEdit.cmp
+++ b/force-app/main/default/aura/TaskEdit/TaskEdit.cmp
@@ -15,7 +15,9 @@
     <aura:attribute name="setReminderValueList" type="String[]" default="Email,Disabled"/>
     <aura:attribute name="reminderFrequencyList" type="String[]" default="Complete By Date,1 day before"/>
     <aura:attribute name="isReferral" type="Boolean"/>
-    <aura:attribute name="reminderEnabled" type="Boolean"/>
+    <aura:attribute name="reminderEnabled" type="Boolean" default="false"/>
+    <aura:attribute name="frequencyEnabled" type="Boolean" default="false"/>
+    <aura:attribute name="reminderDateEnabled" type="Boolean"/>
     <aura:attribute name="errorMessage" type="String"/>
     <aura:attribute name="initialized" type="Boolean" default="false"/>
 
@@ -175,6 +177,9 @@
                             </div>
                             <div class="text">
                                 <aura:unescapedHtml value="{!v.errorMessage}"/>
+                                <div onclick="{!c.doInit}" class="icon-refresh">
+                                    <lightning:icon iconName="action:refresh" alternativeText="Refresh"/>
+                                </div>
                             </div>
                         </aura:if>
 
@@ -186,7 +191,7 @@
                 <!--Reminder Frequency-->
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2">
                     <lightning:select aura:id="reminderFreqId" name="reminderFrequencySelect" label="{!$Label.c.Reminder_Frequency}" required="true"
-                                      onchange="{!c.onChangeFreq}" disabled="{!!v.reminderEnabled}" value="Complete By Date">
+                                      onchange="{!c.onChangeFreq}" disabled="{!!v.frequencyEnabled}" value="Complete By Date">
                         <aura:iteration items="{!v.reminderFrequencyList}" var="freq">
                             <option text="{!freq}"></option>
                         </aura:iteration>
@@ -195,7 +200,7 @@
                 <!--Reminder Date-->
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2">
                     <lightning:input type="date" aura:id="reminderDateId"  label="{!$Label.c.Reminder_Date}"
-                                     value="{!v.task.Completed_Date__c}" disabled="{!!v.reminderEnabled}"/>
+                                     value="{!v.task.Reminder_Date__c}" disabled="{!!v.reminderDateEnabled}" max="{!if(v.task.ActivityDate,v.task.ActivityDate,'')}"/>
                 </div>
             </div>
 
