PEH-421. Clean up story: 11) Update this text to appear in bold and italics whenever it is displayed

--- a/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.css
+++ b/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.css
@@ -92,6 +92,8 @@
     font-family: "Proxima Nova";
     line-height: 16px;
     margin-top: 5%;
+    font-style: italic;
+    font-weight: bold;
 }
 
 .THIS .resource-body {
