--- a/force-app/main/default/aura/DelegateInformation/DelegateInformation.cmp
+++ b/force-app/main/default/aura/DelegateInformation/DelegateInformation.cmp
@@ -16,7 +16,7 @@
         <div class="slds-grid slds-gutters">
             <div class="slds-col slds-size--1-of-3">
                 <h3>{!$Label.c.PG_PST_L_Delegates_Delegate_Information}</h3>
-                <c:DelegateLevelInfoTable userMode="Delegate"/>
+                <c:DelegateLevelInfoTable userMode="Participant"/>
             </div>
             <div class="slds-col slds-grow-none">
                 <div class="height-stub line"></div>
@@ -26,7 +26,7 @@
                     <p>{!v.infoText}</p>
                     <button class="apollo-btn tertiary mti-button"
                             title="{!$Label.c.PG_PST_L_Delegates_Withdraw_From_Delegate}"
-                            onclick="{!c.onclickWithdraw}">
+                            onclick="{!c.onClickWithdraw}">
                         {!$Label.c.PG_PST_L_Delegates_Withdraw_From_Delegate}
                     </button>
                 </div>
